memory-infra: Remove a DCHECK which could reasonably occur

In OSMetrics we DCHECK on not being able to open /proc/$pid/statm
however this could legitimately occur since reading /proc/$pid/statm
happens in the browser process and there is no guarantee that the
renderer processes we are collecting the stats for hasn't gone away in
the meantime. This CL removes the DCHECK, surfacing the failure happens
in OSMetrics::FillOSMemoryDump which guards against the statm fd being
-1.

Bug: 759809
Change-Id: I057f1fe57c26632229f38dae51e489fc600d6482
Reviewed-on: https://chromium-review.googlesource.com/640697
Reviewed-by: Primiano Tucci <primiano@chromium.org>
Commit-Queue: Primiano Tucci <primiano@chromium.org>
Cr-Commit-Position: refs/heads/master@{#498075}
Former-commit-id: ebb7f21ce5bccf5895ad7dca37894c28744d69b5